k8s/debug-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug-secrets
  namespace: pokemon
spec:
  restartPolicy: Never
  containers:
    - name: debug
      image: ekinoox/pokemon-backend:latest
      imagePullPolicy: Always
      command: ["printenv", "DATABASE_URL"]
